--- a/src/app.scss
+++ b/src/app.scss
@@ -1,1 +1,6 @@
+@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables';
+@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons';
+@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid';
+
 @import './styles/main.scss';
